# g4emi

./: .gitignore  CMakeLists.txt  README.md  main.cc  pixi.toml
analysis/: README.md  config_adapter.py  events.py  hdf5Analyzer.py  io.py  plotting.py  secondaries.py  spatial.py  timing.py
docs/: hdf5_schema.md  intensifier.md
examples/: CanonEF50mmf1p0L_example.py  CanonEF50mmf1p0L_example.yaml  README.md  scintillator_catalog_override_example.py  scintillator_catalog_override_example.yaml
examples/SimulationSetup/: CanonEF50mmf1p0L_example.py  CanonEF50mmf1p0L_example.yaml
examples/analysisLite/: README.md  example_support.py  hdf5_event_recoil_analyzer_example.py  hdf5_lite_analyzer_example.py  hdf5_secondary_track_length_analyzer_example.py  hdf5_timing_analyzer_example.py
examples/endToEnd/: README.md  end_to_end_example.py
include/: ActionInitialization.hh  PrimaryGeneratorAction.hh  SimIO.hh  config.hh  messenger.hh  seed.hh  structures.hh
macros/: neutron_gps.mac
scintillators/: README.md  catalog.yaml
sim/: CMakeLists.txt
sim/apps/: g4emi_main.cc
sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhotonOpticalInterfaceSD.hh  PhotonSensorSD.hh  RunAction.hh  SimIO.hh  SteppingAction.hh  TrackingAction.hh  config.hh  messenger.hh  structures.hh  utils.hh
sim/macros/: canon50_vis.mac  canon50mmf1.0L.mac  microscope_run.mac  microscope_vis.mac  neutron_gps.mac
sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotonOpticalInterfaceSD.cc  PhotonSensorSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SimIO.cc  SteppingAction.cc  TrackingAction.cc  config.cc  messenger.cc  seed.cc  utils.cc
src/: DetectorConstruction.cc  EventAction.cc  TrackingAction.cc  config.cc  messenger.cc
test/: README.md
(+60 files in other folders)
